minor edit to html files

--- a/Flask_app/templates/home.html
+++ b/Flask_app/templates/home.html
@@ -10,14 +10,14 @@
 	<header>
 		<div class="container">
 		<div id="brandname">
-			Machine Learning App with Flask
+			Machine Learning App using Flask
 		</div>
-		<h2>Document Title and Topic Prediction For News Articles</h2>
+		<h2>Topic Prediction For News Articles</h2>
 		
 	</div>
 	</header>
 
-	<div class="ml-container">
+	<div class="ml-container" style="text-align:center ;">
 
 		<form action="{{ url_for('predict')}}" method="POST">
 		<p>Enter Your Document Here</p>
